--- a/app/src/main/res/layout/activity_add_members.xml
+++ b/app/src/main/res/layout/activity_add_members.xml
@@ -15,7 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <EditText
+        <android.support.design.widget.TextInputEditText
             android:id="@+id/user_1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -28,7 +28,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/user_label_1">
 
-        <EditText
+        <android.support.design.widget.TextInputEditText
             android:id="@+id/user_2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -42,7 +42,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/user_label_2">
 
-        <EditText
+        <android.support.design.widget.TextInputEditText
             android:id="@+id/user_3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -56,7 +56,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/user_label_3">
 
-        <EditText
+        <android.support.design.widget.TextInputEditText
             android:id="@+id/user_4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -69,7 +69,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/user_label_4">
-        <EditText
+        <android.support.design.widget.TextInputEditText
             android:id="@+id/user_5"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
